// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno 1`] = `
stdout: |
  cirno/0.1.0

  Usage:
    $ cirno <command> [options]

  Commands:
    init                 Initialize a new project
    import [src] [name]  Import an instance
    export [id] [dest]   Export an instance
    clone [id] [name]    Clone an instance
    restore [backup]     Restore to a backup
    backup [id]          Backup an application
    remove [id]          Remove an instance
    list                 List all applications
    yarn [id] -- [...]   Execute Yarn in an application

  For more info, run any command with the \`--help\` flag:
    $ cirno init --help
    $ cirno import --help
    $ cirno export --help
    $ cirno clone --help
    $ cirno restore --help
    $ cirno backup --help
    $ cirno remove --help
    $ cirno list --help
    $ cirno yarn --help

  Options:
    -h, --help     Display this message 
    -v, --version  Display version number 
stderr: ''
code: 0
signal: null
entries: []

`;

exports[`step 2: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno project initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 3: cirno init 1`] = `
stdout: |2
   ERROR  Project already exists. Use \`cirno init -f\` to overwrite.
stderr: ''
code: 1
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;
